--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "14.1.0",
+    "next": "^14.2.35",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindcss": "^3.4.17",
+    "postcss": "^8.4.33",
+    "autoprefixer": "^10.4.16"
   }
 }
