--- a/package.json
+++ b/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "qixio",
-  "private": true,
-  "version": "1.0.0",
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
     "next": "^14.2.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "^3.4.17",
     "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.16"
+    "autoprefixer": "^10.4.16",
+    "typescript": "^5.4.5",
+    "@types/react": "^18.2.45",
+    "@types/node": "^20.11.19"
   }
 }
