--- a/package.json
+++ b/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "qixio",
+  "private": true,
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
   "dependencies": {
     "next": "^14.2.35",
     "react": "18.2.0",
